[package]
name = "pyruse"
version = "2.1.0"
authors = ["Y. <theYinYeti@yalis.fr>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4"
indexmap = { version = "1.3", features = ["serde-1"] }
lettre_email = "0.9"
quoted_printable = "0.4"
regex = "1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.8"
systemd = "0.8"
